@@ -111,6 +111,11 @@ static bool decide_startup_pool(PgSocket *client, MBuf *pkt)
 			dbname = val;
 		else if (strcmp(key, "user") == 0)
 			username = val;
+		else {
+			/* remember requested parameters */
+			if (varcache_set(&client->vars, key, val, true))
+				slog_debug(client, "got var: %s=%s", key, val);
+		}
 	}
 	if (!username) {
 		disconnect_client(client, true, "No username supplied");
