@@ -101,6 +101,8 @@ int cf_log_connections = 1;
 int cf_log_disconnections = 1;
 int cf_log_pooler_errors = 1;
 
+int cf_disable_varcache = 0;
+
 /*
  * config file description
  */
@@ -143,6 +145,7 @@ ConfElem bouncer_params[] = {
 {"log_connections",	true, CF_INT, &cf_log_connections},
 {"log_disconnections",	true, CF_INT, &cf_log_disconnections},
 {"log_pooler_errors",	true, CF_INT, &cf_log_pooler_errors},
+{"disable_varcache",	true, CF_INT, &cf_disable_varcache},
 {NULL},
 };
 
